fix: hide scrollbars

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,10 @@
   }
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
